added account creation feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <header>
         <a href="{{ url_for('home') }}" class="logo"><div class="logo">Connect U</div></a>
         <nav>
-            <a href="{{ url_for('home') }}">Sign Up/In</a>
+            <a href="{{ url_for('accounts') }}">Sign Up/In</a>
             <a href="{{ url_for('home') }}">About</a>
             <a href="{{ url_for('home') }}">Contact</a>
         </nav>
