--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 :root {
@@ -337,4 +338,23 @@ nav a:hover {
 
 .post-actions button:hover {
     color: var(--primary-color);
+}
+
+.sign-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.sign-frame {
+    background-color: var(--card-bg);
+    width: 600px;
+    height: 400px;
+    border-radius: 5%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
