--- a/templates/login.html
+++ b/templates/login.html
@@ -43,9 +43,9 @@
 
     <div class="sign-content">
         <div class="sign-frame">
-            <h2>Create Account</h2>
+            <h2>Log In</h2>
 
-            <form action="{{ url_for('register') }}" method="POST">
+            <form action="{{ url_for('enteraccount') }}" method="POST" class="space-y-6">
                 
                 <div>
                     <label for="username">Username</label>
@@ -59,8 +59,7 @@
 
                 <button type="submit">Register</button>
             </form>
-
-            <a href="{{ url_for('login') }}">Already have an account?</a>
+            </p>
         </div>
     </div>
 </body>
